6/12/12 refactor duplication in control panels for interactive equation
6/12/12 use the same slope drag handler for both line forms
6/12/12 refactor duplication in class hierarchy of line manipulation drag handlers
# 0.00.18 (64844) Jun 7, 2012
6/7/12 change requests based on 6/7 meetings
6/7/12 when rise<0 and run>0, put equation below line so that it isn't occluded by rise/run brackets
6/7/12 rename some classes related to simplified equations
6/7/12 snap point tool to grid while dragging
6/7/12 delete equation controls that aren't used
6/7/12 gray for control panel backgrounds
6/7/12 black for non-interactive parts of equation
6/7/12 change default equations
6/7/12 constants for x and y spacing in interactive equations
6/7/12 position point tools under graph
6/7/12 vertically center controls to right of graph
6/7/12 change format of "unknown" point, make it translatable
6/7/12 make the rise/run labels opaque, but add the ability to vary their color saturation
6/7/12 rename interactive equation nodes
6/7/12 rename SpinnerNode2 (and related classes) to SpinnerNode
6/7/12 delete spinner implementation and image files that were based on fractions sim [64786]
6/7/12 revert to gray for non-interactive parts of equation
# 0.00.17 (64784) Jun 7, 2012
6/7/12 dev version with black for non-interactive parts of equation (requested by KP)
# 0.00.16 (64780) Jun 7, 2012
6/7/12 additional refinements to spinners, based on meeting with AP
6/5/12 fix sign of intercept in equation
6/5/12 clean up constructor interfaces for interactive equations
6/5/12 use neutral blue for background of graph controls
6/5/12 subscripts on x1 and y1
6/5/12 add whitespace to formatting of point-slope equation in title bar of equation control panel
6/5/12 use low-saturation magenta for x1,y1 point color
6/5/12 make spinner arrows slight wider (20->26)
6/5/12 use plain font style for static elements of interactive equations
6/5/12 increase equation font size to 28 pt
# 0.00.15 (64643) Jun 4, 2012