@@ -1,3 +1,4 @@
+6/12/12 refactor duplication in model-container classes for first 2 tabs
 6/12/12 refactor duplication in control panels for interactive equation
 6/12/12 use the same slope drag handler for both line forms
 6/12/12 refactor duplication in class hierarchy of line manipulation drag handlers
